--- a/C-C++02.md
+++ b/C-C++02.md
@@ -1,3 +1,252 @@
+## calloc()
+
++ C库函数`void *calloc(size_t nitems, size_t size)`分配所需的内存空间,并返回一个指向它的指针
+  + nitems -- 要被分配的元素的个数
+  + size   -- 元素的大小
++ malloc和calloc之间的不同点是:malloc不会设置内存为零,而calloc会**设置分配的内存为零**
+
+## assert()
+
++ C库宏 `void assert(int expression)` 允许诊断信息被写入到标准错误文件中。换句话说，它可用于在C程序中添加诊断
++ 参数：
+  + `expression` : 这可以是一个变量或任何C表达式。
+    + 如果`expression`为真，`assert()`不执行任何动作。
+    + 如果`expression`为假，`assert()`会在标准错误`stderr`上显示错误消息，并中止程序执行。
+
+## getenv()
+
++ `#include <stdlib.h>  char* getenv (const char* name);`
++ 检索包含名称被指定为参数的环境变量的值的C字符串。如果请求的变量不是环境列表的一部分，则该函数返回一个空指针。(Retrieves a C-string containing the value of the environment variable whose name is specified as argument. If the requested variable if not part of the environment list, the function returns a null pointer.)
++ 详细信息：`https://cplusplus.com/reference/cstdlib/getenv/`
+
+## to_string()
+
++ 函数声明：`string to_string(int val);`
++ 功能:一个字符串对象，包含val作为字符序列的表示形式
++ 参数：`val` ， 数值
+
+## strcat()
+
++ 函数声明：`char* strcat(char* destination, const char* source);`
++ 功能：将源字符串的副本附加到目标字符串。目标中的终止空字符被源的第一个字符覆盖，并且在目标中两者连接形成的新字符串的末尾包含一个空字符。
++ 参数：
+  + `destination` ： 指向目标数组的指针，它应该包含一个C字符串，并且足够大以包含连接的结果字符串。(Pointer to the destination array, which should contain a C string, and be large enough to contain the concatenated resulting string.)
+  + `source` : 要附加的C字符串，这部应该与目标字符串相同。(C string to be appended. This should not overlap destination.)
+
+## puts()
+
++ 函数声明：`int puts(const char* str);`
++ 功能：将字符串写入标准输出。将str指向的C字符串写入标准输出(stdout)并且附加一个换行符(`'\n'`)。
+  + 该函数从指定的地址（str）开始复制，直到到达终止空字符（'\0')。此终止空字符不会复制到流中
+  + 注意，puts不仅与fputs不同，它使用标准输出作为目标，而且它还在末尾自动附加一个环行符（fputs则没有）
++ 参数：
+  + `str` : 需要打印的C字符串
++ 返回值
+  + 成功时，返回一个非负值
+  + 失败时，该函数返回EOF并且设置错误指示符(ferror)
+
+## sprintf()
+
++ `#include <stdio.h>  int sprintf(char *str, const char* format, ... )`
++ 功能：发送格式化输出到str所指向的字符串
++ 参数：
+  + `str`：这是指向一个字符数组的指针，该数组存储了C字符串
+  + `format`:这是字符串，包含了要被写入到字符串`str`的文本。它可以包含嵌入的`format`标签，`format`标签可被随后的附加参数中指定的值替换，并按需求进行格式化。`format`标签属性是`%[flags][width][.precision][length]specifier`
+  + 具体详情：
+  + `specifier, 说明符`：
+    + `c` : 字符
+    + `d, i` : 有符号的十进制整数
+    + `e` : 使用`e`字符的科学计数法（尾数和指数）
+    + `E` : 使用`E`字符的科学计数法（尾数和指数）
+    + `f` : 十进制浮点数
+    + `g` : 自动选择`%e`或`%f`中合适的表示法
+    + `G` : 自动选择`%E`或`%f`中合适的表示法
+    + `o` : 有符号八进制
+    + `s` : 字符的字符串
+    + `u` : 无符号十进制整数
+    + `x` : 无符号十六进制整数
+    + `X` : 无符号十六进制整数（大写字母）
+    + `p` : 指针地址
+    + `n` : 无输出
+    + `%` : 字符
++ 返回值：
+  + 如果成功，则返回写入的字符总数，不包括字符串追加在字符串末尾的空字符
+  + 如果失败，则返回一个负数
+
+## sscanf()
+
++ `#include <stdio.h>  int sscanf(const char* s, const char* format, ...);`
++ 从s读取数据并根据参数格式将它们存储到附加参数给出的位置，就像使用了scanf一样，但从s而不是标准输入（stdin）读取数据。(Reads data from s and stores them according to parameter format into the locations given by the additional arguments, as if scanf was used, but reading from s instead of the standard input(stdin).)
++ 附加参数应该指向已分配的对象，其类型由格式字符串中的相应格式说明符指定。(The additional arguments should point to already allocated objects of the type specified by their corresponding format specifier within the format string.)
++ 返回值：成功时，该函数返回参数列表中成功填充的项目数。在匹配失败的情况下，此计数可以匹配预期的项目数或更少（甚至为零）。(On success, the function returns the nunber of items in the argument list successfully filled. This count can match the expected number of items or be less(even zero) in the case of a matching failure.).
++ 详细信息：`https://cplusplus.com/reference/cstdio/sscanf/`
+
+## c_str()
+
++ 返回指向包含以null结尾的字符序列（即C字符串）的数组的指针，该字符序列表示字符串对象的当前值。(Returns a poointer to an array that contains a null-terminated sequence of characters (i.e, a C-string) representing the current vcalue of the string object)
++ 这个数组包含构成字符串对象值的相同字符序列，以及末尾的附加终止空字符`\0` (This array includes the same sequence of characters that make up the value of the string object plus an additional terminating null-character ('\0') at the end)
++ 返回值：指向字符串对象值的C字符串表示形式的指针。(A pointer to the c-string representation of the string object's vcalue .)
+
+## strtok()
+
+## strtol()
+
++ `#include <stdlib.h>  long int strtol (const char* str, char** endptr, int base);`
++ 解析C字符串str，将其内容解释为指定基数的整数，该基数作为long int返回。如果endptr不是空指针，该函数还将endptr的值设置为指向数字后的第一个字符。(Parses the C-string str interpreting its content as an integral number of the specified base, which is returned as a long int value. If endptr is not a null pointer, the function also sets the value of endptr to point to the first character after the number.)
++ 该函数首先根据需要丢弃尽可能多的空白字符，直到找到第一个非空白字符。然后，从这个字符开始，按照依赖于基本参数的语法获取尽可能多的有效字符，并将它们解释为数值。最后，指向str中整数表示之后的第一个字符的指针存储在endptr指向的对象中。(The function first discards as many whitespace characters as necessary until the first non-whitespace character is found. Then, starting from this character, takes as many characters as possible that are valid following a syntax that depends on the base parameter, and interprets them as a numerical value. Finally , a pointer to the first character following the integer representation in str is stored in the object pointed by endptr.)
++ 参数：
+  + `str`:以整数表示的C字符串开头(C-string beginning with the representation of an integral number)
+  + `endptr`:引用`char*`类型的对象，其值由函数设置为`str`中数值之后的下一个字符。
+  + `base`:确定有效字符及其解释的数字基数
++ 返回值：
+  + 成功时，该函数将转换后的整数作为long int值返回
+  + 如果无法执行有效转换，则返回零值
+
+## strcasecmp()
+
++ `#include <string.h>  extern int strcasecmp(const char *__s1, const char *__s2)`
++ 函数功能：比较参数s1和s2字符串，比较时会自动忽略大小写的差异
++ 返回值：
+  + 若参数s1和s2字符串相等则返回0；
+  + s1大于s2，则返回大于0的值；
+  + s1小于s2则返回小于0的值
+  
+## strncasecmp()
+
++ `#include <string.h>  int strncasecmp(const char* s1, const char* s2, size_t n);`
+  
++ 功能：
+  + 用来比较参数s1和s2字符串前n各字符，比较时会自动忽略大小写的差异
+
++ 返回值
+  + 如果参数s1和s2字符串相同，则返回0
+  + s1若大于s2，则返回大于0的值
+  + s1若小于s2，则返回小于0的值
+
+## reserve()
+
++ 原型：`void reserve (size_type n);`
++ 功能：请求更改容量
++ 参数：
+  + `n` ： 向量的最小容量。
+
+## C标准库 -- `stdarg.h`
+
++ 简介：`stdarg.h`头文件定义了一个变量类型`va_list`和三个宏，**这三个宏可用于在参数个数未知（即参数个数可变）时获取函数中的参数。**
+  + 可变参数的函数通过在参数列表的末尾是使用省略号（`...`）定义的。
+
++ **库变量：**
+  + `va_list` ： 这是一个适用于`va_start()`, `va_arg()` 和 `va_end()`这三个宏存储信息的类型。
+
++ **库宏：**
+  + `void va_start(va_list ap, last_arg)`：
+    + 这个宏初始化`ap`变量，它与`va_arg`和`va_end`宏是一起使用的。`last_arg`是最后一个传递给函数的已知的固定参数，即省略号之前的参数。这个宏必须在使用`va_arg`和`va_end`之前被调用
+    + 参数：
+      + `ap` -- 这是一个`va_list`类型的对象，它用来存储通过`va_arg`获取额外参数时所必需的信息。
+      + `last_arg` -- 最后一个传递给函数的已知的固定参数
+  + `void va_end(va_list ap)`:
+    + C库宏`void va_end(va_list ap)`允许使用了`va_start`宏的带有可变参数的函数返回。如果在从函数返回之前没有调用`va_end`，则结果为未定义
+    + 参数：
+      + `ap` -- 这是之前由同一函数中的`va_start`初始化的`va_list`对象。
+
+## std::get()
+
+```
+  (1)template <size_t I, class... Types> typename tuple_element<I, tuple<Types...>>::type& get(tuple<Types...>& tpl) noexcept;
+  (2)template <size_t I, class... Types> typename tuple_element<I, tuple<Types...>>::type&& get(tuple<Types...>&& tpl) noexcept;
+  (3)template <size_t I, class... Types> typename tuple_element<I, tuple<Types...>>::type const& get(tuple<Types...>& tpl) noexcept;
+```
+
++ 功能：返回对元组`tpl`的第`I`个元素的引用。
+  + 版本2将元组的右值作为引用参数，向前应用到返回的元素
+  + 版本3将const元组作为参数，返回对元素的const引用
++ 参数
+  + `I` -- 元组中元素的位置，0为第一个元素的位置，`size_t`是无符号整数类型
+  + `Types` -- 元组中元素的类型（通常从tpl隐式获得）
++ 返回值
+  + 对元组中指定位置的元素的引用
+
+## fstat()
+
++ `#include <sys/stat.h>  int fstat(int __fd, struct stat *__buf);`
++ 功能：获取文件的所有信息
+  + Get file attributes for the file, device, pipe, or socket that file descriptor FD is open on and put the in BUF
+
+## mmap()
+
++ mmap(memory map，即地址的映射)，是一种内存映射文件的方法，将一个文件或者其他对象映射到进程的地址空间，实现文件磁盘地址和进程虚拟地址空间中一段虚拟地址的一一对应关系。
++ `mmap()`系统调用，使得进程之间通过映射同一个普通文件实现共享内存。普通文件被映射到进程地址空间后，进程可以访问普通内存一样对文件进行访问，不必再调用`read(), write()`等操作。
++ mmap()系统调用并不是完全为了用于共享内存而设计的。它本身提供了不同于一般对普通文件的访问方式，进程可以像读写内存一样对普通文件的操作。而POSIX或系统V的共享内存IPC则只是用于共享目的。
+
++ Linux通过内存映像机制来提供用户程序对内存直接访问的能力。内存映像的意思是把内核中特定部分的内存空间映射到用户级程序的内存空间去。也就是说，用户空间和内核空间共享一块相同的内存。
++ 相对于传统的write/read IO系统调用，必需先把数据从磁盘拷贝至内核缓冲区（页缓冲），然后再把数据拷贝至用户进程中。两者相比，mmap会少一次拷贝数据，这样带来的性能提升是巨大的
+
++ `#include <sys/mman.h>  void* mmap(void* addr, size_t length, int prot, int flags, int fd, off_t offset);`
++ 参数
+  + `addr` -- 指定文件应被映射到进程空间的起始地址，一般被指定一个空指针，此时选择起始地址的任务留给内核来完成
+  + `length` -- 指的是映射到调用进程地址空间的字节数，它从被映射文件开头offset各字节开始算起
+  + `prot` -- 指定共享内存的访问权限
+  + `flags` -- 常值 ： MAP_SHARED, MAP_PRIVATE, MAP_PIXED`
+  + `offset` -- 一般设置为0，表示从文件头开始映射
+  + `fd` -- 为即将映射到进程空间的文件描述字，一般由`open()`返回。
++ 返回值
+  + 函数的返回值为最后文件映射到进程空间的地址，进程可直接操作其是地址为该值的有效地值。
+
++ 具体原理：`https://blog.csdn.net/Holy_666/article/details/86532671`
+
+## munmap()
+
++ `#include <sys/mman.h>  int munmap(void* __addr, size_t __len);`
++ 功能：解除任何内存映射
+  + Deallocate any mapping for the region starting at ADDR and extending LEN bytes. 
++ 返回值
+  + 成功返回0
+  + 失败返回-1
+
+## vsscanf()
+
++ `int vsscanf(const char* s, const char* format, va_list arg);`
+  
++ 功能：**将格式化数据从字符串读取到变量参数列表中**。从s读取数据并根据参数格式将它们存储到由arg标识的变量参数列表中的元素所指向的位置。
+  + 在内部，该函数从由arg标识的列表中检索参数，就好像在其上使用了`va_arg`一样，因此`arg`的状态可能会被调用更改。
+  + 无论如何，`arg`应该在调用之前的某个时间点由`va_start`初始化，并且预计在调用之后的某个时间点由`va_end`释放。
+  
++ 参数
+  + `s` -- 函数将其处理为检索数据的源的C字符串
+  + `format` -- 包含**格式字符串**的C字符串，该格式字符串遵循与`scanf`中的格式相同的规范
+  + `arg` -- 一个值，用于标识使用`va_start`初始化的变量参数列表。`va_list`是在`<cstdarg>`中定义的特殊类型。
+  
++ 返回值：
+  + 成功时，该函数返回参数列表中成功填充的项目数
+  + 在匹配失败的情况下，此计数可以匹配预期的项目数或更少，甚至为零。
+  + 如果在成功解释任何数据之前输入失败，则返回EOF
+
+## memset()
+
++ `void* memset(void* ptr, int value, size_t num);`
+  
++ 功能：
+  + 将`ptr`指向的内存块的前`num`字节设置为指定值（解释为无符号字符）
+  + Sets the first num bytes of the block of memory pointed by ptr to the specified value(interpreted as an unsigned char).
+  
++ 参数
+  + `ptr` -- 指向要填充的内存块的指针
+  + `value` -- 要设置的值。该值作为int传递，但是该函数使用该值的转换的无符号字符填充内存块
+  + `num` -- 要设置为值的字节数。`size_t`是无符号整数类型
+
++ 返回值
+  + 返回`ptr`
+
+## max()
+
++ `template <class T> const T& max (const T& a, const T& b);`
+  
++ 功能
+  + 返回a和b中的最大值。如果两者相等，则返回a
+
++ 返回值
+  + 作为参数传递的最大值
+
 ## C/C++判断变量的类型
 
 + C++判断变量类型：利用`typeid()`来判断变量类型
@@ -106,20 +355,6 @@
   + 这跟不用new声明对象有很大区别：类指针可以先行定义，但是类指针只是一个通用指针，在`new`之前并未对该类对象分配任何内存空间。
   + 使用普通方式创建的类对象，在创建之初就已经分配了内存空间，而类指针，如果没有经过对象初始化，则不需要`delete`释放
 
-## vsscanf()
-
-+ `int vsscanf(const char* s, const char* format, va_list arg);`
-+ 功能：**将格式化数据从字符串读取到变量参数列表中**。从s读取数据并根据参数格式将它们存储到由arg标识的变量参数列表中的元素所指向的位置。
-  + 在内部，该函数从由arg标识的列表中检索参数，就好像在其上使用了`va_arg`一样，因此`arg`的状态可能会被调用更改。
-  + 无论如何，`arg`应该在调用之前的某个时间点由`va_start`初始化，并且预计在调用之后的某个时间点由`va_end`释放。
-+ 参数
-  + `s` -- 函数将其处理为检索数据的源的C字符串
-  + `format` -- 包含**格式字符串**的C字符串，该格式字符串遵循与`scanf`中的格式相同的规范
-  + `arg` -- 一个值，用于标识使用`va_start`初始化的变量参数列表。`va_list`是在`<cstdarg>`中定义的特殊类型。
-+ 返回值：
-  + 成功时，该函数返回参数列表中成功填充的项目数
-  + 在匹配失败的情况下，此计数可以匹配预期的项目数或更少，甚至为零。
-  + 如果在成功解释任何数据之前输入失败，则返回EOF
 
 ## tuple,元组
 
@@ -147,22 +382,6 @@
 + 在构造函数中使用`new`来分配内存时，必须在相应的析构函数中使用`delete`来释放内存。如果使用`new[]`（包括中括号）来分配内存，则应使用`delete[]`（包括中括号）来释放内存。
 
 
-## std::get()
-
-```
-  (1)template <size_t I, class... Types> typename tuple_element<I, tuple<Types...>>::type& get(tuple<Types...>& tpl) noexcept;
-  (2)template <size_t I, class... Types> typename tuple_element<I, tuple<Types...>>::type&& get(tuple<Types...>&& tpl) noexcept;
-  (3)template <size_t I, class... Types> typename tuple_element<I, tuple<Types...>>::type const& get(tuple<Types...>& tpl) noexcept;
-```
-
-+ 功能：返回对元组`tpl`的第`I`个元素的引用。
-  + 版本2将元组的右值作为引用参数，向前应用到返回的元素
-  + 版本3将const元组作为参数，返回对元素的const引用
-+ 参数
-  + `I` -- 元组中元素的位置，0为第一个元素的位置，`size_t`是无符号整数类型
-  + `Types` -- 元组中元素的类型（通常从tpl隐式获得）
-+ 返回值
-  + 对元组中指定位置的元素的引用
 
 ## 内存模型和名称空间
 
@@ -199,3 +418,51 @@
 + 链接性(linkage)描述了名称如何在不同单元间共享。
   + 链接性为外部的名称可在文件间共享，链接性为内部的名称只能由一个文件中的函数共享
   + 自动变量的名称没有链接性，因为它们不能共享
+
+## 类 -- 成员名和参数名
+
++ 构造函数的参数，表示的不是类成员，而是赋给类成员的值。因此，参数名不能与类成员的名称相同
++ 为了避免这种混乱
+  + 一种常见的做法是 -- **在数据成员名中使用`m_`前缀**
+  + 另一种常见的做法是 -- **在数据成员名中使用`_`后缀**
+
+## typedef
+
++ `typedef`声明,为现有类型创建一个新的名字。比如常常使用`typedef`来编写更美观和可读的代码。所谓美观，是指`typedef`能够隐藏笨拙的语法构造以及平台相关的数据类型，从而增强可移植性以及未来的可维护性。
+
++ 在编程中使用`typedef`目的一般有两个，一个是给变量一个容易记且意义明确的新名字，另一个是简化一些比较复杂的类型声明。
+
++ `typedef`并不是创建新的类型，它仅仅为现有类型添加一个同义字
+
++ `typedef`的最简单使用
+  + `typedef int size;`
+  + `typedef unsigned int u_int;`
+
++ **typedef和数组，指针**
+  + 可以不用像下面这样重复定义有81个字符元素的数组：
+    + `char line[81];`
+    + `char text[81];`
+  + 定义一个`typedef`，每当要用到相同类型和大小的数组时，可以：
+    + `typedef char Line[81];`
+    + `Line text, secondline;`
+  + 同样，可以像下面这样隐藏指针语法：
+    + `typedef char* pstr;`
+    + `pstr str = "abc";`
+    + `int mystrcmp(pstr, pstr);`
+
++ **typedef和函数**
+  + 函数指针一般用于回调，例如信号处理。回调是比较常用的技术，而回调就要涉及函数指针。
+  + 当程序有以下函数：
+    + `void printHello(int i);`
+  + 然后需要定义一个函数指针，指向`printHello`,并且调用这个方法，代码如下：
+    + `void (*pFunc)(int);`
+    + `pFunc = &printHello;`
+    + `(*pFunc)(110);`
+  + 其中，`void (*pFunc)(int)`是声明一个函数指针，指向返回值是`void`，调用参数是`(int)`的函数，变量名是`pFunc`就是函数指针。这种声明一个函数指针是比较复杂的，尤其是要在多处地方声明同一个类型的函数指针变量，代码更加复杂
+  + 简化的做法
+    + `typedef void (*PrintHelloHandle)(int);`
+  + 使用代码如下：
+    + `PrintHelloHandle pFunc;`
+    + `pFunc = &printHello;`
+    + `(*pFunc)(110);`
+  + 以后其他地方的程序需要声明类似的函数指针，只需要使用：`PrintHelloHandle pFuncOther;`
