--- a/视频图像基础知识.md
+++ b/视频图像基础知识.md
@@ -46,3 +46,23 @@
   + 帧内压缩是生成I帧的算法
   + 帧间压缩是生成B帧和P帧的算法
 + 通常，把完成编码的I帧称为**关键帧**。因为解码非关键帧需要解码其参考的帧，因此在截图等不需要全部解码的操作中，经常截取关键帧以提升性能。
+
+启动mysql
+/etc/init.d/mysql start 
+
+启动redis
+/etc/init.d/redis-server start
+
+启动mqtt
+/etc/init.d/mosquitto start 
+
+启动nginx 
+/etc/init.d/nginx start 
+
+启动supervisor
+/etc/init.d/supervisor start
+
+启动服务
+supervisorctl start all
+
+通过命令supervisorctl status 查看服务是否启动，如果正常启动，control manager websocket 三个线程的状态都是successd
