update on my computer 10.04

--- a/C-C++02.md
+++ b/C-C++02.md
@@ -5,6 +5,32 @@
   + size   -- 元素的大小
 + malloc和calloc之间的不同点是:malloc不会设置内存为零,而calloc会**设置分配的内存为零**
 
+## access()
+
++ `#include <unistd.h> int access (const char *__name, int __type);`
+
++ 功能：确定文件或文件夹的访问权限。即，检查某个文件的存取方式，例如说是只读方式，只写方式等。如果指定的存取方式有效，则函数返回0，否则返回-1
+
++ 参数
+  + `name` -- 文件路径
+  + `type` -- 判断参数
+    + `R_OK 4` -- 读权限
+    + `W_OK 2` -- 写权限
+    + `X_OK 1` -- 执行权限
+    + `F_OK 0` -- 是否存在
+
+## remove()
+
++ `#include <stdio.h>  int remove(const char* __filename);`
+
++ 通过文件名称删除文件
+
+## rename()
+
++ `#include <stdio.h> int rename(const char* old, const char* new);`
+
++ 重命名一个文件
+
 ## assert()
 
 + C库宏 `void assert(int expression)` 允许诊断信息被写入到标准错误文件中。换句话说，它可用于在C程序中添加诊断
@@ -72,6 +98,22 @@
 + 返回值：
   + 如果成功，则返回写入的字符总数，不包括字符串追加在字符串末尾的空字符
   + 如果失败，则返回一个负数
+
+## snprintf()
+
++ `int snprintf(char* s, size_t n, const char* format, ...);`
+
++ 功能：将格式化的输出写入大小适中的缓冲区
+
++ 参数：
+  + `s` -- 指向存储C字符串的缓冲区的指针。这个缓冲区的大小至少要能存储`n`个字符
+  + `n` -- 在缓冲区存储的最大字节数。通常，生成的字符串最大长度为`n-1`，留下一个空间存储空字符
+  + `format` -- 和printf格式一样，C字符串要存储的格式
+
++ 返回值
+  + 如果写入正常，返回被写入的字符数
+  + 如果错误，返回一个负数
+  + 只有当返回的不是一个负数，且小于`n`时，字符串才被完全写入
 
 ## sscanf()
 
