--- a/编程思维.md
+++ b/编程思维.md
@@ -47,3 +47,13 @@
   + 自底向上，从具体的文件到子模块，从子模块到功能集，再到整个项目，强调的是从具体实现出发总结出一般抽象。
   + 自顶向下，从项目的顶层设计到责任分发，从责任分发到功能分发，再到具体的实现代码，强调的是从抽象设计出发落实到具体实现。
   + 两种方法是两个不同的视角。实践中经常需要结合两种方向随时切换地采用，当对大方向了解不足的时候自顶向下的看，当对实现细节不够明确的时候自底向上的看
+
+## 上下文 context
+
++ 维基百科
+  + 在计算机科学中，任务(task)的上下文(context)是一个任务所必不可少的一组数据（该任务可以是进程，线程）。
+  + 这些数据允许任务中断，在这之后仍可在同一个地方继续执行。上下文的这一概念在中断的任务的场景下具有重大意义。其中，任务在被中断之后，处理器保存上下文并提供中断处理(interrupt service routine)。因此，上下文越小，延迟越小。
+  + 上下文的数据可能存放于处理器寄存器，任务所利用的内存，某些操作系统管理的任务所使用的控制寄存器(control registers)
+
++ 通俗的理解，上下文，也就是执行任务所需要的相关信息。
++ 这个任务可以是一段代码，一个线程，一个进程，一个函数。当这个“任务”相关的信息需要保存下来时，就可以使用`context`来记录。
