--- a/深度学习.md
+++ b/深度学习.md
@@ -195,3 +195,70 @@
    1. 在二分分类问题中，目标是训练处一个分类器，它以图片的特征向量x作为输入，预测输出的结果标签y是1还是0，也就是预测图片中是否有猫
 2. logistic regression（logistic 回归）
    1. 它是一个学习算法，用在监督学习问题中输出标签是0还是1时，二元分类问题
+
+## 雷锋网
+
++ `https://www.leiphone.com/category/ai/DZeAwe2qgx8JhbU8.html`
+
+## 大部分深度学习框架都包含以下五个核心组件
+  + 张量 （`Tensor`）
+  + 基于张量的各种操作
+  + 计算图（`Computation Graph`）
+  + 自动微分工具（`Automatic Differentiation`）工具
+  + `BLAS, cuBLAS, cuDNN`等扩展包
+
+### 张量
+
++ 张量是所有深度学习框架中最核心的组件，因为后续的所有运算和优化算法都是基于张量进行的
++ 几何代数中定义的张量是， **基于向量和矩阵的推广**，通俗一点理解的话，可以将标量视为零阶张量，矢量视为一阶张量，那么据栈就是二阶张量
+
++ 举例来说，可以将任意一张RGB彩色图片表示称一个三阶张量， 三个纬度分别是图片的高度，宽度和色彩数据。
++ 将这一定义进行扩展，我们也可以用四阶张量表示一个包含多张图片的数据集，其中的四个纬度分别是 -- 图片在数据集中的编号，图片高度，宽度，以及色彩数据。
+
++ **将各种各样的数据抽象成张量表示，然后再输入神经网络模型进行后续处理是一种非常必要且高效的策略**。
++ 因为，如果没有这一步骤，我们就需要根据各种不同类型的数据组织形式定义各种不同类型的数据操作，这会浪费大量的开发这精力。更关键的是，当数据处理完成后，我们还可以方便地将张量再转回想要的格式。
+
+### 基于张量的各种操作
+
++ 整个神经网络都可以简单视为为了达到某种目的，针对输入张量进行的一系列操作过程。而所谓的“学习”就是不断纠正神经网络的实际输出结果和预期结果之间的误差的过程。
++ 这里的一系列操作包含的范围很宽，可以是简单的矩阵乘法，也可以是卷积，池化和LSTM等稍复杂的运算。而且各框架支持的张量操作通常也不尽相同。
+
++ 需要指出的是，**大部分的张量操作都是基于类实现的（而且是抽象类）**，而并不是函数（这一点可能要归功于大部分的深度学习框架都是用面向对象的编程语言实现的）。
++ 这种实现思路一方面允许开发这将各种类似的操作汇总在一起，方便组织管理。另一方面也保证了整个代码的复用性，扩展性和对外接口的统一。总体上让整个框架更灵活和易于扩展，为将来的发展预留了空间。
+
+### 计算图(Computation Graph)
+
++ 有了张量和基于张量的各种操作之后，下一步就是将各种操作整合起来，输出需要的结果
+
++ 但不幸的是，随着操作种类和数量的增多，有可能引发各种意想不到的问题，包括多个操作之间应该并行还是顺次执行，如何协同各种不同的底层设备，以及如何避免各种类型的冗余操作等。这些问题有可能拉低整个深度学习网络的运行效率或者引入不必要的Bug，而计算图正是为解决这一问题产生的。
+
++ 计算图首次被引入人工智能领域是2009年的论文`<Learning Deep Architectures for AI>`。作者用不同的占位符构成操作结点，以字母构成变量结点，再以有向线段将这些结点连接起来，组成一个表征运算逻辑关系的清晰明了的图型数据结构，这就是最初的计算图
++ 后来随着技术的不断演进，加上脚本语言和低级语言各自不同的特点（概括地说，脚本语言建模方便但执行缓慢，低级语言正好相反），因此业界逐渐形成了一种开发框架：**前端用Python等脚本语言建模，后端用C++等低级语言执行（这里低级是就应用层而言），以此综合了两者的优点**。
++ 这种开发框架大大降低了传统框架做跨设备计算时的代码耦合度，也避免了每次后端变动都需要修改前端的维护开销。而这里，在前端和后端之间起到的关键耦合作用的就是计算图。
+
++ 将计算图作为前后端之间的中间表示(Intermediate Representations)可以带来良好的交互性，开发这可以将Tensor对象作为数据结构，函数/方法作为操作类型，将特定的操作类型应用于特定的数据结构，从而定义出类似MATLAB的强大建模语言。
+
++ 因为计算图的引入，开发者得以从宏观上俯瞰整个神经网络的内部结构，就好像编译器可以从整个代码的角度决定如何分配寄存器那样，计算图也可以从宏观上决定代码运行时的GPU内存分配，以及分布式环境中不同底层设备间的相互协作方式。除此之外，现在也有许多深度学习框架将计算图应用于模型调试，可以实时输出当前某一操作类型的文本描述。
+
+### 自动微分(Automatic Differentiation)工具
+
++ 计算图带来的另一个好处是让模型训练阶段的梯度计算变得模块化且更为便捷，也就是自动微分法。
+
++ **我们可以将神经网络视为由许多非线性过程组成的一个复杂的函数体，而计算图则以模块化的方式完整表征了这一函数体的内部逻辑关系，因此微分这一复杂函数体，即求取模型梯度的方法就变成了在计算图中简单地从输入到输出进行一次完整遍历的过程**。与自动微分对应，业内更传统的做法是符号微分。
+
+### `BLAS, CUBLAS, CUDNN`等扩展包
+
++ 通过上述所有模块，已经可以搭建一个全功能的深度学习框架：
+  + 将待处理数据转换为张量，针对张量施加各种需要的操作，通过自动微分对模型展开训练，然后得到输出结果开始测试
+  + 这个时候还缺 -- 运算效率
+
++ 由于此前的大部分实现都是基于高级语言的，而即时是执行最简单的操作，高级语言也会比低级语言消耗更多的CPU周期，更何况是结构复杂的深度神经网络，因此运算缓慢就成了高级语言的一个天然的缺陷。
+
++ 目前针对这一个问题有两种解决方案
+  + 第一种方法是模拟传统的编译器。就好像传统编译器会把高级语言编译成特定平台的汇编语言实现高效运行一样，这种方法将高级语言转换为C语言，然后在C语言基础上编译，执行。为了实现这种转换，每一种张量操作的实现代码就会预先加入C语言的转换部分，然后由编译器在编译阶段将这些由C语言实现的张量操作综合在一起。目前`pyCUDA`和`Cpython`等编译器都已经实现了这一功能
+  + 第二种方法就是，利用脚本语言实现前端建模，用低级语言实现后端运行，这意味着高级语言和低级语言之间的交互都发生在框架内部，因此每次的后端变动都不需要修改前端，也不需要完整编译（只需要通过修改编译参数进行部分编译），因此整体速度也就更快
+
++ 除此之外，由于低级语言的最优化编程难度很高，而且大部分的基础操作其实也都有公开的最优解决方案，因此另一个显著的加速手段就是利用现成的扩展包。
++ 例如，最初用`Fortran`实现的BLAS（基础线形代数子程序）就是一个非常优秀的基本矩阵（张量）运算库，此外，还有英特尔的MKL(`Math Kernel Library`)等
+
++ 为了向开发者提供尽量简单的接口，大部分深度学习框架通常都会将普通的概念抽象化，这可能是造成许多用户感知不到上述五点核心组件的重要原因。
