--- a/C-C++02.md
+++ b/C-C++02.md
@@ -245,6 +245,37 @@
   + 成功返回0
   + 失败返回-1
 
+## 锁定物理内存 -- mlock家族
+
++ 锁住内存是为了防止这段内存被操作系统交换掉(swap)，并且由于此操作风险高，仅超级用户可以执行。
+
++ 家族成员
+  ```
+    #include <sys/mman.h>
+    int mlock(const void* addr, size_t len);
+    int munlock(const void* addr, size_t len);
+    int mlockall(int flags);
+    int munlockall(void);
+  ```
+
++ `getpagesize()`函数返回系统的分页大小，在X86 Linux系统上，这个值是4KB
+
++ 如果希望程序的全部地址空间被锁定在物理内存中，使用`mlockall`，该函数将调用进程的全部虚拟地址空间加锁，防止出现内存交换，将该进程的地址空间交换到外存上
++ `mlockall()`将所有映射到进程地址空间的内存上锁，这些页包括 -- 代码段，数据段，栈段，共享库，共享内存, user space kernel data, memory-mapped file。当函数成功返回的时候，所有的被映射的页都在内存中
++ 参数
+  + `MCL_CURRENT` -- 仅当前已分配的内存会被锁定，之后分配的内存则不会
+  + `MCL_FUTURE` -- 锁定之后分配的所有内存
+  + `MCL_CURRENT|MCL_FUTURE` -- 将已经以及将来分配的所有内存锁定在物理内存中
++ 返回值
+  + 成功返回`0`
+  + 出错返回`-1`
++ 此函数有两个重要的应用：
+  + `real-time algorithms（实时算法）` -- 对事件要求非常高
+  + `high-scurity data processing（机密数据的处理）` -- 如果数据被交换到外存上，可能会泄密
++ 如果进程执行了一个`execve`类函数，所有的锁都会被删除
++ 内存锁不会被子进程继承
++ 内存锁不会叠加，即使多次调用`mlockall()`函数，只调用一次`munlockall()`就会解锁
+
 ## vsscanf()
 
 + `int vsscanf(const char* s, const char* format, va_list arg);`
