--- a/C-C++02.md
+++ b/C-C++02.md
@@ -276,6 +276,18 @@
 + 内存锁不会被子进程继承
 + 内存锁不会叠加，即使多次调用`mlockall()`函数，只调用一次`munlockall()`就会解锁
 
+## clock_gettime()
+
++ 功能：函数`clock_gettime()`是基于Linux C语言的时间函数，可以用于计算时间，有秒和纳秒两种精度
+
++ 函数原型：`int clock_gettime(clockid_t clk_id, struct timespec *tp);`
++ 参数：
+  + `clockid_t clk_id`有四种
+    + `CLOCK_REALTIME` -- 系统实时时间，随系统实时时间改变而改变
+    + `CLOCK_MONOTONIC` -- 从系统启动这一刻开始计时，不受系统时间被用户改变的影响
+    + `CLOCK_PROCESS_CPUTIME_ID` -- 本进程到当前代码系统CPU花费的时间
+    + `CLOCK_THREAD_CPUTIME_ID` -- 本线程到当前代码系统CPU花费的时间
+
 ## vsscanf()
 
 + `int vsscanf(const char* s, const char* format, va_list arg);`
