--- a/远程登录.md
+++ b/远程登录.md
@@ -1,3 +1,23 @@
+# 什么是socks
+
++ socks是一种网络传输协议，主要用于客户端与外网服务器之间通讯的中间传递。SOCKS是SOCKets的缩写
++ 当防火墙后的客户端要访问外部的服务器时，就跟SOCKS代理服务器连接。这个代理服务器控制客户端访问外网的资格。允许的话，就将客户端的请求发往外部的服务器。这个协议最初由David Koblas开发，而后由NEC的Ying-Da Lee将其扩展到版本4。最新协议是版本5，与前一版相比，增加支持UDP，验证以及IPv6
+
+
+## 内网穿透
+
++ 内网，就是在公司或者家庭内部，建立的一种局域网络或者是办公网络，从而实现多台电脑之间可以进行资源的共享，包括设备，资料，数据等。而外网则是由一个网关与其他的网络系统连接，相对于内网而言，这种网络称之为外部网络，也就是我们经常说到的互联网。
+
++ 内网穿透，是我们在进行网络连接时的一种术语，也叫做NAT穿透，即在计算机是局域网内的时候，外网与内网的计算机的节点进行连接时所需要的连接通信，有时候就会出现内网穿透不支的情况。
++ 内网穿透的功能就是，当我们在端口映射时设置时，内网穿透起到了地址转换的功能，也就是把公网的地址进行翻译，转成一种私有的地址，然后再采用路由的方式ADSL的宽带路由器，具有一个动态或者是固定的公网IP，最后ADSL直接在交换机上，这样所有的电脑都可以共享上网。内网穿透除了可以实现内网之间机器的网络通信功能之外，还可以解决UDP中出现的数据传输不稳定的问题
+
++ 内网穿透可以通过开放的第三方端口来实现，可以安装一个NAT123端口内网穿透软件，然后再添加映射，并且配置出映射端口的信息，外网的地址是映射之后访问的域名，同时也可以是自己或者默认的域名，通过内网穿透，可以用域名进行对应的内网应用。如果是外网地址使用的是自己的域名，可以把域名的解析只想提示目标地址来使用。
+
++ 简单来说，内网穿透就是在我们没有公网IP的时候，也可以通过内网穿透服务器的转发，在任何互联网（广域网）连接内网的设备。
+
++ 推荐工具：Zero Tier , frp, **socat命令**
+
+
 ### linux之间建立共享目录
 
 如何使A服务器的某个目录挂载到B服务器的某个目录下,使其达到B服务下的目录文件一旦变更,可以实时的在A服务器的目录下体现出来?
