update on vmware machine

--- a/视频图像基础知识.md
+++ b/视频图像基础知识.md
@@ -1,3 +1,48 @@
+# 码流 码率 比特率 帧速率 分辨率 高清
+
+## GOP， Group of picture
+
++ 关键帧的周期，也就是两个IDR帧之间的距离，一个帧组的最大帧数，一般而言，每一秒视频至少需要使用一个关键帧，增加关键帧个数可以改善质量，但是同时增加带宽和网络负载。
++ 需要说明的是，通过提高GOP值来提高图像质量是有限度的，在遇到场景切换的情况是，H.264解码器会自动强制插入一个帧，此时实际的GOP值被缩短了。另一个方面，在一个GOP中，P，B帧是由I帧预测得到的。当I帧的图像质量比较差时，会影响到一个GOP中后续的P，B帧的图像质量，直到下一个GOP开始才有可能恢复，所以GOP也不宜设置过大。
+
+## 码率/码流
+
++ 码流（Data Rate）是指视频文件在单位时间内使用的数据流量，也叫码率或码流率，通俗一点的理解就是取样率，是视频编码中画面质量控制中最重要的部分，一般我们用的单位是kb/s或者Mv/s。
++ 一般来说同样分辨率下，视频文件的码流越大，压缩比就越小，画面质量就越高。
+  + 码流越大，说明单位时间内取样率越大，数据流，精度就越高，处理出来的文件就越接近原始文件，图像质量越好，画质越清晰，要求播放设备的解码能力也越高。
++ 当然，码流越大，文件体积也越大，其计算公式是：文件体积=时间*码率/8
++ 通常来说，一个视频文件包括了画面及声音，例如一个RMVB的视频文件，里面包含了视频信息和音频信息，音频及视频都有各自不同的采样方式和比特率，也就是说，同一个视频文件，音频和视频的比特率并不是一样的，而我们所说的一个视频文件码流率大小，一般是指视频文件中音频及视频信息码流率的综合。
++ 以国内最流行的RMVB视频文件为例，RMVB中的VB，指的是VBR，即Variable Bit Rate的缩写，中文含义是可变比特率，他标识RMVB采用的是动态编码的方式，把较高的采样率用于复杂的动态画面，而把较低的采样率用于静态画面，合理利用资源，达到画质与体积可兼得的效率
++ 码率和取样率最根本的差别就是码率是针对源文件来讲的
+
+## 采样率
+
++ 采样率，也成为采样速度或采样频率，定义了每秒从连续信号中提取并组成离散信号的采样个数，它用赫兹Hz来表示。
++ 采样率是指将模拟信号转换成数字信号时采样频率，也就是单位时间内采样多少点。一个采样点数据有多少比特。
++ 比特率是指每秒传送的比特数，单位为bps（bit per second），比特率越高，传送的数据越大，音质越好。
++ 比特率=采样率 * 采样位数*声道数
+
+## 比特率
+
++ 比特率是指每秒传送的比特数，单位为bps (bit per second)
++ 比特率越高，传送的数据越大。**在视频领域，比特率通常翻译为码率**
++ 比特率表示经过编码（压缩）后的音，视频数据每秒钟需要用多少个比特来表示，而比特就是二进制里面最小的单位，要么是0，要么是1.
++ 比特率与音，视频压缩的关系，简单的说就是比特率越高，音，视频的质量就越好，但是编码后的文件就越大
++ 比特率是指将数字声音，视频由模拟格式转化成数字格式的采样率，采样率越高，还原后的音质，画质就越好
++ 常见编码模式：
+  + VBR(Variable Bitrate)， 动态比特率，也就是没有固定的比特率，压缩软件在压缩时根据音频数据即时确定使用什么比特率，这是以质量为前提兼顾文件大小的方式，推荐的编码模式
+  + ABR(Average Bitrate)， 平均比特率，是VBR的一种插值参数。LAME针对CBR不佳的文件体积比和VBR生成文件大小补丁的特点独创了这种编码模式。ABR在指定的文件大小内，以每50帧（30帧约一秒）为一段，低频和不敏感频率使用相对低的流量，高频和大动态表现时使用高流量，可以作为VBR和CBR的一种折中选择
+  + CBR（Constant Bitrate），常数比特率，指文件从头到尾都是一种位比特率，相对于VBR和ABR来说，它压缩出来的文件体积最大，而音质相对于它们来说不会有明显的提高
+
+## 帧速率
+ 
++ 帧速率，也成为FPS(frames per second)， 是指每秒刷新的图片的帧数，也可以理解为图形处理器每秒钟能够刷新几次
+
+## 分辨率
+
++ 就是帧大小，每一帧就是一幅图像
++ 计算输出文件大小公式：
+  + (音频编码率(KBit为单位)/8 + 视频编码率(KBit为单位)/8) * 影片总长度（秒为单位） = 文件大小（MV为单位）
 ## 图像处理 行宽(linesize) 步长(stride) 间距(pitch)
 
 + 间距，有很多别名，在使用ffmpeg解码时，称为`linesize`；使用ffmpeg转换格式时，称为`stride`
