--- a/交叉编译和远程调试.md
+++ b/交叉编译和远程调试.md
@@ -20,3 +20,11 @@
 + `cwd`:程序源代码路径(**重要**)
 + `miDebuggerPath`:交叉编译工具中的gdb
 + `miDebuggerServerAddress`:远程gdbserver服务,根据设备对应修改
+
+## `gdbserver`使用方法，与PC机xxx-gdb搭配使用
+
++ 开发板：`gdbserver <ip address> <listening port> <program>`
+  + 例如：`gdbserver 192.167.66.112:9999 demo_02.exe`
+  + 需要注意的一点是：需要调试的程序在编译时记得加上`-g`参数
+
++ PC机:在终端中输入`aarch64-linux-gnu-gdb`之后进入gdb调试模式，然后输入`target remote ip-address:port`即可连接远程目标
