--- a/晶视.md
+++ b/晶视.md
@@ -1,5 +1,13 @@
 ## 笔记
 
++ `cp -r ../ubuntu1604/CV183x .`
+
++ `./configure.sh -c CV183X -p aarch64 -g`
+
++ `./demo.exe test_ffmpeg --src webwxgetvideo2222222.mp4 ./aaa.mp4`
+
+  `export LD_LIBRARY_PATH=/data/picture/VideoProcess/3party/lib:/data/picture/VideoProcess/lib:/mnt/flash/Server/lib/:$LD_LIBRARY_PATH`
+
 + 通过接口使用物理设备，
 + 每一个物理设备都有一个设备号，一一对应，指定哪一个设备号就是用哪一个设备
 
