--- a/交叉编译和远程调试.md
+++ b/交叉编译和远程调试.md
@@ -28,3 +28,5 @@
   + 需要注意的一点是：需要调试的程序在编译时记得加上`-g`参数
 
 + PC机:在终端中输入`aarch64-linux-gnu-gdb`之后进入gdb调试模式，然后输入`target remote ip-address:port`即可连接远程目标
+
++ 交叉编译，程序的参数是从gdbserver 传进来的，其原理就是将调试信息通过端口发送到远程
