--- a/晶视.md
+++ b/晶视.md
@@ -4,9 +4,11 @@
 
 + `./configure.sh -c CV183X -p aarch64 -g`
 
-+ `./demo.exe test_ffmpeg --src webwxgetvideo2222222.mp4 ./aaa.mp4`
++ `export LD_LIBRARY_PATH=/data/picture/VideoProcess/3party/lib:/data/picture/VideoProcess/lib:/mnt/flash/Server/lib/:$LD_LIBRARY_PATH`
 
-  `export LD_LIBRARY_PATH=/data/picture/VideoProcess/3party/lib:/data/picture/VideoProcess/lib:/mnt/flash/Server/lib/:$LD_LIBRARY_PATH`
++ `./demo.exe test_ffmpeg src webwxgetvideo2222222.mp4 `
+
++ `gdbserver :9999 test_01.exe test_ffmpeg src MAH00433.mp4 `
 
 + 通过接口使用物理设备，
 + 每一个物理设备都有一个设备号，一一对应，指定哪一个设备号就是用哪一个设备
