--- a/视频图像基础知识.md
+++ b/视频图像基础知识.md
@@ -1,11 +1,11 @@
-# 码流 码率 比特率 帧速率 分辨率 高清
+## 码流 码率 比特率 帧速率 分辨率 高清
 
-## GOP， Group of picture
+### GOP， Group of picture
 
 + 关键帧的周期，也就是两个IDR帧之间的距离，一个帧组的最大帧数，一般而言，每一秒视频至少需要使用一个关键帧，增加关键帧个数可以改善质量，但是同时增加带宽和网络负载。
 + 需要说明的是，通过提高GOP值来提高图像质量是有限度的，在遇到场景切换的情况是，H.264解码器会自动强制插入一个帧，此时实际的GOP值被缩短了。另一个方面，在一个GOP中，P，B帧是由I帧预测得到的。当I帧的图像质量比较差时，会影响到一个GOP中后续的P，B帧的图像质量，直到下一个GOP开始才有可能恢复，所以GOP也不宜设置过大。
 
-## 码率/码流
+### 码率/码流
 
 + 码流（Data Rate）是指视频文件在单位时间内使用的数据流量，也叫码率或码流率，通俗一点的理解就是取样率，是视频编码中画面质量控制中最重要的部分，一般我们用的单位是kb/s或者Mv/s。
 + 一般来说同样分辨率下，视频文件的码流越大，压缩比就越小，画面质量就越高。
@@ -15,14 +15,14 @@
 + 以国内最流行的RMVB视频文件为例，RMVB中的VB，指的是VBR，即Variable Bit Rate的缩写，中文含义是可变比特率，他标识RMVB采用的是动态编码的方式，把较高的采样率用于复杂的动态画面，而把较低的采样率用于静态画面，合理利用资源，达到画质与体积可兼得的效率
 + 码率和取样率最根本的差别就是码率是针对源文件来讲的
 
-## 采样率
+### 采样率
 
 + 采样率，也成为采样速度或采样频率，定义了每秒从连续信号中提取并组成离散信号的采样个数，它用赫兹Hz来表示。
 + 采样率是指将模拟信号转换成数字信号时采样频率，也就是单位时间内采样多少点。一个采样点数据有多少比特。
 + 比特率是指每秒传送的比特数，单位为bps（bit per second），比特率越高，传送的数据越大，音质越好。
 + 比特率=采样率 * 采样位数*声道数
 
-## 比特率
+### 比特率
 
 + 比特率是指每秒传送的比特数，单位为bps (bit per second)
 + 比特率越高，传送的数据越大。**在视频领域，比特率通常翻译为码率**
@@ -34,16 +34,16 @@
   + ABR(Average Bitrate)， 平均比特率，是VBR的一种插值参数。LAME针对CBR不佳的文件体积比和VBR生成文件大小补丁的特点独创了这种编码模式。ABR在指定的文件大小内，以每50帧（30帧约一秒）为一段，低频和不敏感频率使用相对低的流量，高频和大动态表现时使用高流量，可以作为VBR和CBR的一种折中选择
   + CBR（Constant Bitrate），常数比特率，指文件从头到尾都是一种位比特率，相对于VBR和ABR来说，它压缩出来的文件体积最大，而音质相对于它们来说不会有明显的提高
 
-## 帧速率
+### 帧速率
  
 + 帧速率，也成为FPS(frames per second)， 是指每秒刷新的图片的帧数，也可以理解为图形处理器每秒钟能够刷新几次
 
-## 分辨率
+### 分辨率
 
 + 就是帧大小，每一帧就是一幅图像
 + 计算输出文件大小公式：
   + (音频编码率(KBit为单位)/8 + 视频编码率(KBit为单位)/8) * 影片总长度（秒为单位） = 文件大小（MV为单位）
-## 图像处理 行宽(linesize) 步长(stride) 间距(pitch)
+### 图像处理 行宽(linesize) 步长(stride) 间距(pitch)
 
 + 间距，有很多别名，在使用ffmpeg解码时，称为`linesize`；使用ffmpeg转换格式时，称为`stride`
 
@@ -51,6 +51,18 @@
 + 现在计算机的cpu都是32位或者64位，一次最少读取4个字节或者8个字节，如果少于这些，反而要做一些额外的工作，会花更长的时间，所以会有一个概念叫做**内存对齐**，将结构体的长度设为4或8的倍数。
 + 间距，也是因为同样的理由出现。图像的操作通常按行操作的，如果图像的所有数据都紧密排列，那么会发生非常多次的读取非对齐内存，会影响效率
 + 间距，就是指图像中的一行图像数据所占的存储空间的长度，它是一个**大于等于图像宽度的内存对齐的长度**。这样每次以行为基准读取数据的时后就能内存对齐，虽然可能会导致内存浪费，但是在内存充裕的今天已经无所谓了。
+
+----------------------------------------------------------------------------------------------------------------------------------
+
+## 图像基本概念
+
+### JPEG编码
+
++ 参考信息
+  + `https://zhuanlan.zhihu.com/p/145847377` : 海思MPP技术笔记
+
+
+----------------------------------------------------------------------------------------------------------------------------------
 
 ## 视频基本概念
 
@@ -92,22 +104,3 @@
   + 帧间压缩是生成B帧和P帧的算法
 + 通常，把完成编码的I帧称为**关键帧**。因为解码非关键帧需要解码其参考的帧，因此在截图等不需要全部解码的操作中，经常截取关键帧以提升性能。
 
-启动mysql
-/etc/init.d/mysql start 
-
-启动redis
-/etc/init.d/redis-server start
-
-启动mqtt
-/etc/init.d/mosquitto start 
-
-启动nginx 
-/etc/init.d/nginx start 
-
-启动supervisor
-/etc/init.d/supervisor start
-
-启动服务
-supervisorctl start all
-
-通过命令supervisorctl status 查看服务是否启动，如果正常启动，control manager websocket 三个线程的状态都是successd
