--- a/视频图像基础知识2.md
+++ b/视频图像基础知识2.md
@@ -16,7 +16,7 @@
 
 ### 视频协议
 
-+ 视频协议，是针对网络流媒体而言的，也就是只有在有网络时通过浏览器或者移动端APP才能看到的视频，目前常见的协议有RTSP， RTMP， HLS，HTTP等
++ 视频协议，**是针对网络流媒体而言的**，也就是只有在有网络时通过浏览器或者移动端APP才能看到的视频，目前常见的协议有RTSP， RTMP， HLS，HTTP等
 
 + 有的文章会把视频协议归入视频封装格式，因为它们都同时携带了音视频和metadata，以及协议/格式需要的其他信息。
 + 以FFMpeg为例，它并不区分视频格式和视频协议。
@@ -24,7 +24,7 @@
 ### 视频流
 
 + 常见的词语有：
-  + h264码流， yuv流， 编码流， 解码流， 原始流， 裸流，  或者 未压缩的流
+  + h264码流，yuv流，编码流，解码流，原始流，裸流，或者 未压缩的流
 
 + 归纳的讲，视频流，一定只有两种形式
   + 经过压缩算法压缩的流数据，称为**编码流**，又因为目前压缩/编码算法以H264为主，因此常常称为**H264码流**
@@ -32,7 +32,7 @@
 
 + 总结
   + h264码流，压缩后的流， 编码流 ： 是压缩/编码后的视频流
-  + yuv流，解码流，未压缩的流 ： 是未经过压缩/编码的视频流
+  + yuv流，解码流，未压缩的流     ： 是未经过压缩/编码的视频流
   + 裸流，是一个具有歧义的词，是上下文内容，既可以是前者，也可以是后者
 
  + 因此，在阅读任何流媒体相关的文章时，看到视频流都应该搞清楚，是编码/压缩的,还是没有
