--- a/C-C++02.md
+++ b/C-C++02.md
@@ -5,6 +5,36 @@
   + size   -- 元素的大小
 + malloc和calloc之间的不同点是:malloc不会设置内存为零,而calloc会**设置分配的内存为零**
 
+## fopen()
+
++ 原型： `FILE *fopen(const char *filename, const char *mode);`
++ 功能：使用给定的模式(mode)打开(filename)所指向的文件
++ 参数：
+  + `filename` -- 字符串，表示要打开的文件名称
+  + `mode`     -- 字符串，表示文件的访问模式
+    + `r`  -- 打开一个用于读取的文件。该文件必须存在
+    + `w`  -- 创建一个用于写入的空文件。如果文件名称与已存在的文件相同，则会删除已有文件的内容，文件被视为一个新的空文件
+    + `a`  -- 追加到一个文件。写操作向文件末尾追加数据。如果文件不存在，则创建文件
+    + `r+` -- 打开一个用于更新的文件，可读取也可写入。该文件必须存在
+    + `w+` -- 创建一个用于读写的空文件
+    + `a+` -- 打开一个用于读取和追加的文件
++ 返回值：
+  + 成功  -- 返回一个`FILE`指针
+  + 失败  -- 返回`NULL`，且设置全局变量`errno`来标识错误
+
+## fwrite()
+
++ 原型：`size_t fwrite(const void *ptr, size_t size, size_t nmemb, FILE *stream);`
++ 功能：把 `ptr` 所指向的数组中的数据写入到给定流 `stream` 中
++ 参数：
+  + `ptr`    -- 这是指向要被写入的元素数组的指针
+  + `size`   -- 这是要被写入的每个元素的大小，以字节为单位
+  + `nmemb`  -- 这是元素的个数，每个元素的大小为 size 字节
+  + `stream` -- 这是指向 FILE 对象的指针，该 FILE 对象指定了一个输出流
++ 返回值：
+  + 成功  -- 返回一个 size_t 对象，表示元素的总数，该对象是一个整型数据类型
+  + 失败  -- 返回一个错误
+
 ## access()
 
 + `#include <unistd.h> int access (const char *__name, int __type);`
