--- a/晶视-1838.md
+++ b/晶视-1838.md
@@ -4,11 +4,13 @@
 
 + `./configure.sh -c CV183X -p aarch64 -g`
 
++ `scp user@192.167.15.58:/home/user/workspace/vca_learn-workspace/video_process/build/test.exe ./test_enc.exe`
+
 + `export LD_LIBRARY_PATH=/data/picture/VideoProcess/3party/lib:/data/picture/VideoProcess/lib:/mnt/flash/Server/lib/:$LD_LIBRARY_PATH`
 
-+ `./demo.exe test_ffmpeg src webwxgetvideo2222222.mp4 `
++ `gdbserver :9999 test_enc.exe test_ffmpeg --src forget.mp4`
 
-+ `gdbserver :9999 test_env.exe test_ffmpeg --src MAH00433.mp4 `
++ `scp -r imgs/ user@192.167.15.58:/tmp/`
 
 + 通过接口使用物理设备，
 + 每一个物理设备都有一个设备号，一一对应，指定哪一个设备号就是用哪一个设备
