--- a/晶视-1838.md
+++ b/晶视-1838.md
@@ -1,16 +1,21 @@
 ## 笔记
 
-+ `cp -r ../ubuntu1604/CV183x .`
+```
+cp -r ../ubuntu1604/CV183x .
 
-+ `./configure.sh -c CV183X -p aarch64 -g`
+./configure.sh -c CV183X -p aarch64 -g
 
-+ `scp user@192.167.15.58:/home/user/workspace/vca_learn-workspace/video_process/build/test.exe ./test_enc.exe`
+bash ssh-1838.sh
 
-+ `export LD_LIBRARY_PATH=/data/picture/VideoProcess/3party/lib:/data/picture/VideoProcess/lib:/mnt/flash/Server/lib/:$LD_LIBRARY_PATH`
+scp user@192.167.15.58:/home/user/workspace/vca_learn-workspace/video_process/build/test.exe ./test_enc.exe
 
-+ `gdbserver :9999 test_enc.exe test_ffmpeg --src forget.mp4`
+export LD_LIBRARY_PATH=/data/picture/VideoProcess/3party/lib:/data/picture/VideoProcess/lib:/mnt/flash/Server/lib/:$LD_LIBRARY_PATH
 
-+ `scp -r imgs/ user@192.167.15.58:/tmp/`
+gdbserver :9999 test_enc.exe test_ffmpeg --src MAH00433.mp4
+
+scp -r imgs/ user@192.167.15.58:/tmp/
+
+```
 
 + 通过接口使用物理设备，
 + 每一个物理设备都有一个设备号，一一对应，指定哪一个设备号就是用哪一个设备
@@ -278,6 +283,193 @@
 
 --------------------------------------------------------------------------------------------------------------------------------
 
+## 编码
+
+### CVI_VENC_CreateChn
+
++ 原型：`CVI_S32 CVI_VENC_CreateChn (VENC_CHN VeChn, const VENC_CHN_ATTR_S *pstAttr);`
++ 功能：创建编码通道
++ 参数：
+  + `VeChn`  -- VENC Channel 号  --  输入
+  + `pstAttr`  -- VENC_CHN_ATTR_S 属性指针--  输入
++ 返回值:
+  + CVI_SUCCESS   -- 成功
+  + 非0           -- 失败，其值为错误码
++ 需求:
+  + 头文件:cvi_comm_venc.h、cvi_venc.h
+  + 库文件:libvenc.a
++ 注意:
+  + 通道属性分为三个结构：
+    + VENC_ATTR_S: 决定编码属性此属性决定编码协议并赋值设定对应宽，高
+    + VENC_RC_ATTR_S:码率控制器属性， 此属性随编码设定及码率控制模式 （CBR、VBR、FIXQP）不同对应子结构做设定
+    + VENC_GOP_ATTR_S: GOP 类型属性,编码 GOP 类型(编码单参考帧,P帧, GOP 类型。)
+    + 推荐的编码宽高为: 3840x2160(4k)、1920x1080(1080P)、1280x720(720P)
+  + 用户可参阅 `sample_common_venc.c` 内 `SAMPLE_COMM_VENC_SetChnAttr`参考对应属性指针的设定
+
+### CVI_VENC_DestroyChn
+
++ 原型：`CVI_S32 CVI_VENC_DestroyChn (VENC_CHN VeChn);`
++ 功能：销毁编码通道
++ 参数：
+  + `VeChn`  -- VENC Channel 号  -- 输入
++ 返回值:
+  + CVI_SUCCESS   -- 成功
+  + 非0           -- 失败，其值为错误码
++ 需求:
+  + 头文件:cvi_comm_venc.h、cvi_venc.h
+  + 库文件:libvenc.a
++ 注意:
+  + 销毁并不存在的通道,将返回失败
+  + 可参阅 `sample_common_venc.c`,销毁通道前必须停止传送 frame
+
+### CVI_ VENC_StartRecvFrame
+
++ 原型：`CVI_S32 CVI_VENC_StartRecvFrame(VENC_CHN VeChn, const VENC_RECV_PIC_PARAM_S *pstRecvParam);`
++ 功能：开启编码通道接收输入图像,允许指定接收帧数,**超出指定的帧数后自动停止接收图像**
++ 参数：
+  + `VeChn`  --  编码通道号  --  输入
+  + `pstRecvParam`  --  接收图像参数结构体指针,用于指定需要接收的图像帧数  --  输入
++ 返回值:
+  + CVI_SUCCESS   -- 成功
+  + 非0           -- 失败，其值为错误码
++ 需求:
+  + 头文件:cvi_comm_venc.h、cvi_venc.h
+  + 库文件:libvenc.a
++ 注意:
+  + 如果通道未创建,则返回失败
+  + **开启编码器接收之后才能开始接收图像编码**
+  + 可參照 `sample_common_venc.c` 內 `SAMPLE_COMM_VENC_Start` 函式
+
+### CVI_ VENC_StopRecvFrame
+
++ 原型：`CVI_S32 CVI_VENC_StopRecvFrame(VENC_CHN VeChn);`
++ 功能：停止编码通道接收输入图像。
++ 参数：
+  + `VeChn`  --  编码通道号  --  输入
++ 返回值:
+  + CVI_SUCCESS   -- 成功
+  + 非0           -- 失败，其值为错误码
++ 需求:
+  + 头文件:cvi_comm_venc.h、cvi_venc.h
+  + 库文件:libvenc.a
++ 注意:
+  + 通道销毁前,需调用 `CVI_VENC_StopRecvFrame`
+  + 如通道未创建或通道已销毁,则返回失败
+  + **调用此接口仅停止接收原始数据编码,码流 buffer 并不会被清除**
+  + 此接口用于编码通道停止接收图像来编码,**在编码通道销毁或复位前必须停止接收图像**
+  + 可參照 `sample_common_venc.c` 內 `SAMPLE_COMM_VENC_Stop` 函式
+
+### CVI_VENC_QueryStatus
+
++ 原型：`CVI_S32 CVI_VENC_QueryStatus(VENC_CHN VeChn, VENC_CHN_STATUS_S *pstStatus);`
++ 功能：查询编码通道状态。
++ 参数：
+  + `VeChn`  --  编码通道号  --  输入
+  + `pstStatus`  --  编码通道的状态指针。 --  输入
++ 返回值:
+  + CVI_SUCCESS   -- 成功
+  + 非0           -- 失败，其值为错误码
++ 需求:
+  + 头文件:cvi_comm_venc.h、cvi_venc.h
+  + 库文件:libvenc.a
++ 注意:
+  + 如果通道未创建,则返回失败
+  + 在编码通道状态结构体中,**`u32CurPacks` 表示当前帧的码流包个数**。在调用`CVI_VENC_GetStream` 之前应确保 `u32CurPacks` 大于 0
+
+### CVI_VENC_SendFrame
+
++ 原型：`CVI_S32 CVI_VENC_SendFrame(VENC_CHN VeChn, const VIDEO_FRAME_INFO_S *pstFrame, CVI_S32 S32MilliSec);`
++ 功能：送出影像以供编码
++ 参数：
+  + `VeChn`  --  编码通道号  --  输入
+  + `pstFrame`  --  VIDEO_FRAME_INFO_S 属性指针。  --  输入
+  + `S32MilliSec`  --  发送图像超时时间,取值范围:[-1,+∞ ) | -1:阻塞 | 0:非阻塞 | 大于0:超时时间。--  输入
++ 返回值:
+  + CVI_SUCCESS   -- 成功
+  + 非0           -- 失败，其值为错误码
++ 需求:
+  + 头文件:cvi_comm_venc.h、cvi_venc.h
+  + 库文件:libvenc.a
++ 注意:
+  + 此接口支持用户发送图像至编码通道，以进行编码
+  + 调用该接口发送图像,用户需要保证编码通道已创建且开启接收输入图像
+  + 可參照 `sample_venc_lib.c` 內 `SAMPLE_VENC_GetVencStreamProc`
+
+### CVI_VENC_GetStream
+
++ 原型：`CVI_S32 CVI_VENC_GetStream(VENC_CHN VeChn, VENC_STREAM_S *pstStream, CVI_S32 S32MilliSec);`
++ 功能：获取编码的码流。
++ 参数：
+  + `VeChn`  --  编码通道号  --  输入
+  + `pstFrame`  --  码流结构体指针  --  输出
+  + `S32MilliSec`  --  发送图像超时时间,取值范围:[-1,+∞ ) | -1:阻塞 | 0:非阻塞 | 大于0:超时时间。--  输入
++ 返回值:
+  + CVI_SUCCESS   -- 成功
+  + 非0           -- 失败，其值为错误码
++ 需求:
+  + 头文件:cvi_comm_venc.h、cvi_venc.h
+  + 库文件:libvenc.a
++ 注意:
+  + venc 通道必须先创建,否则此函式会回传错误
+  + 在非 `bind mode` 状况下,`CVI_VENC_SendFrame` 必须有调用过,否则`CVI_VENC_GetStream` 将无法获得码流结构
+  + `CVI_VENC_GetStream` 调用之前,可以搭配 `CVI_VENC_GetChnAttr`,`CVI_VENC_QueryStatus` 调用确保编码信道当下的正确性
+  + 码流结构体 `VENC_STREAM_S` 包含 4 个部分
+    + 码流包信息指针 `pstPack` --  指向一组 `VENC_PACK_S` 的内存空间,**该空间由调用者分配**。注意:`pstPack` 空间必须在调用`CVI_VENC_GetStream` 前给予对应空间,否则将回传错误
+  + 可參照 `sample_venc_lib.c` 內的 `SAMPLE_VENC_GetVencStreamProc`
+
+### CVI _ VENC_ReleaseStream
+
++ 原型：`CVI_S32 CVI_VENC_ReleaseStream(VENC_CHN VeChn, VENC_STREAM_S *pstStream);
++ 功能：释放码流缓存
++ 参数：
+  + `VeChn`  --  编码通道号  --  输入
+  + `pstFrame`  --  码流结构体指针  --  输出
++ 返回值:
+  + CVI_SUCCESS   -- 成功
+  + 非0           -- 失败，其值为错误码
++ 需求:
+  + 头文件:cvi_comm_venc.h、cvi_venc.h
+  + 库文件:libvenc.a
++ 注意：
+  + 请确认 `venc` 通道已创建
+  + 请确认 `CVI_VENC_ReleaseStream` 在 `CVI_VENC_GetStream` 之后,**若提前调用`CVI_VENC_ReleaseStream`,则 `CVI_VENC_GetStream` `将不具备取得正确stream` 保证**
+  + 用户获取码流后必须及时释放已经获取的码流缓存,否则可能会导致码流`buffer` 满,影响编码器编码
+
+### CVI_VENC_GetChnParam
+
++ 原型：`CVI_S32 CVI_VENC_GetChnParam(VENC_CHN VeChn, VENC_CHN_PARAM_S *pstChnParam);`
++ 功能：获取通道参数。
++ 参数：
+  + `VeChn`  --  编码通道号  --  输入
+  + `pstChnParam`  --  Venc 的通道参数指针  --  输入
++ 返回值:
+  + CVI_SUCCESS   -- 成功
+  + 非0           -- 失败，其值为错误码
++ 需求:
+  + 头文件:cvi_comm_venc.h、cvi_venc.h
+  + 库文件:libvenc.a
+
+### CVI_VENC_SetChnParam
+
++ 原型：`CVI_S32 CVI_VENC_SetChnParam(VENC_CHN VeChn, const VENC_CHN_PARAM_S *pstChnParam);`
++ 功能：设置通道参数。
++ 参数：
+  + `VeChn`  --  编码通道号  --  输入
+  + `pstChnParam`  --  Venc 的通道参数指针  --  输入
++ 返回值:
+  + CVI_SUCCESS   -- 成功
+  + 非0           -- 失败，其值为错误码
++ 需求:
+  + 头文件:cvi_comm_venc.h、cvi_venc.h
+  + 库文件:libvenc.a
++ 注意：
+  + 本接口在编码通道创建之后,编码通道销毁之前调用
+  + 此函数呼叫于`CVI_VENC_CreateChn` 之后
+  + 此函数API参数支持venc crop设置，其使用参数为
+    + VENC_CHN_PARAM_S,stCropCfg。 可设定对应的 x，y 轴及宽（width），高（height）
+
+--------------------------------------------------------------------------------------------------------------------------------
+
 ## 视频处理子系统(VPSS) -- API参考
 
 ### CVI_VPSS_GetChnFrame
@@ -300,3 +492,4 @@
   + **该函数将获得的图像信息保存在 pstvideoFrame 里面,并包含了图像的虚拟地址和物理地址**
 
 + `VENC_CHN_ATTR_S::VENC_ATTR_S`:决定编码属性,此属性决定编码协议并赋值设定对应宽，高
+
