--- a/C-C++02.md
+++ b/C-C++02.md
@@ -15,6 +15,7 @@
     + `r`  -- 打开一个用于读取的文件。该文件必须存在
     + `w`  -- 创建一个用于写入的空文件。如果文件名称与已存在的文件相同，则会删除已有文件的内容，文件被视为一个新的空文件
     + `a`  -- 追加到一个文件。写操作向文件末尾追加数据。如果文件不存在，则创建文件
+    + `b`  -- 以二进制模式打开文件
     + `r+` -- 打开一个用于更新的文件，可读取也可写入。该文件必须存在
     + `w+` -- 创建一个用于读写的空文件
     + `a+` -- 打开一个用于读取和追加的文件
@@ -34,6 +35,18 @@
 + 返回值：
   + 成功  -- 返回一个 size_t 对象，表示元素的总数，该对象是一个整型数据类型
   + 失败  -- 返回一个错误
+
+## fflush()
+
++ 原型：`int fflush(FILE *stream);`
++ 功能：刷新流 `stream` 的输出缓冲区
++ 参数：
+  + `stream` -- 这是指向 `FILE` 对象的指针，该 `FILE` 对象指定了一个缓冲流
++ 返回值：
+  + 成功 -- 返回零值
+  + 失败 -- 返回 EOF，且设置错误标识符（即 feof）
++ 头文件：
+  + `stdio.h`
 
 ## access()
 
