--- a/视频图像基础知识2.md
+++ b/视频图像基础知识2.md
@@ -64,3 +64,29 @@
   + GOP， Group Of Pictures，一般来说，指的是两个I帧之间的间隔
   + PTS, Presentation Time Stamp， 显示时间戳，它用来告诉播放器该什么时候显示这一帧的数据
   + DTS, Decoding Time Stamp， 解码时间戳，它的意义在于告诉解码器在什么时候解码这一帧的数据
+
+-----------------------------------------------------------------------------------------------------------------------------------------
+
+## JPG-JPEG（JFIF） 文件解码-文件结构
+
++ 参考链接：`https://blog.csdn.net/ymlbright/`
+
++ `JPEG`文件使用的数据存储方式有多种。最常用的格式称为`JPEG`文件交换格式（`JPEG File Interchange Format，JFIF`）
++ 而JPEG文件大体上由一个个数据段组成，数据段包含：标记码(Tag)、数据长度、数据
+
++ 标记码由两个字节构成，其前一个字节是固定值`0xFF`，后一个字节则根据不同意义有不同数值
++ 在每个标记码之前还可以添加数目不限的无意义的0xFF填充，也就说连续的多个0xFF可以被理解为一个0xFF，并表示一个标记码的开始。而在一个完整的两字节的标记码后，就是该标记码对应的压缩数据流，记录了关于文件的诸种信息。
++ 常用的标记有`SOI、APP0、DQT、SOF0、DHT、DRI、SOS、EOI`
++ 注意，SOI等都是标记的名称。在文件中，标记是以标记码形式出现的。例如SOI的标记代码为0xFFD8，即在JPEG文件中的如果出现数据0xFFD8，则表示此处为一个SOI标记
+  + SOI  （0xFFD8） -- 代表JFIF图像数据的开始
+  + APP0 （0xFFE0） -- 应用程序标记 0 
+  + APPn （0xFFEn） -- 拓展应用程序标记 2~15， 为其他应用程序保留 
+  + DQT  （0xFFDB） -- 量化表，存储了对扫描数据进行量化的 8*8 矩阵
+  + SOFx （0xFFCx） -- 图像帧开始
+  + DHT  （0xFFC4） -- Huffman表，存储了对扫描数据进行压缩的Huffman表，共4张，DC直流2张，AC交流2张
+  + SOS  （0xFFDA） -- 扫描数据开始 
+  + scanData       -- 图像的压缩数据，为了不与之前的标记码（Tag）混淆，数据中遇到 0xFF 时，需要进行判断
+    + 0xFF00：表示 0xFF 是图像数据的组成部分
+    + 0xFFD0~0xFFD7：RSTn标记，遇到标记时，对差分解码变量进行重置（归0）
+    + 0xFFD9：图像结束标记，图像压缩数据至此结束
+  + EOI  （0xFFD9） -- 代表JFIF图像数据的结束，即文件结尾
